[package]
name = "pahkat-reposrv"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9.0"
parking_lot = "0.11.2"
poem = "1.2.36"
poem-openapi = { version = "1.2.36", features = ["rapidoc", "chrono"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
tokio = { version = "1.15.0", features = ["full"] }
pahkat-types = { git = "https://github.com/divvun/pahkat.git", features = ["poem-openapi"] } 
pahkat-repomgr = { git = "https://github.com/divvun/pahkat.git" } 
arc-swap = "1.5.0"
tracing = "0.1.29"
chrono = "0.4.19"
tracing-subscriber = "0.3.5"
toml = "0.5.8"
structopt = "0.3.25"
thiserror = "1.0.30"
fbs = "0.6"
anyhow = "1.0.52"
tempfile = "3.3.0"
figment = { version = "0.10.6", features = ["toml", "env"] }

[features]
playground = []
