[package]
name = "pahkat-reposrv"
version = "0.3.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = { version = "1.15.0", features = ["parking_lot"] }
parking_lot = "0.12.1"
poem = "1.3.46"
poem-openapi = { version = "2.0.17", features = ["rapidoc", "chrono"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }
pahkat-types = { git = "https://github.com/divvun/pahkat.git", features = ["poem-openapi", "async-graphql"] } 
pahkat-repomgr = { git = "https://github.com/divvun/pahkat.git" } 
arc-swap = "1.5.1"
tracing = "0.1.37"
chrono = "0.4.22"
tracing-subscriber = "0.3.16"
toml = "0.5.9"
structopt = "0.3.26"
thiserror = "1.0.37"
fbs = "0.6.0"
anyhow = "1.0.65"
tempfile = "3.3.0"
figment = { version = "0.10.8", features = ["toml", "env"] }
uuid = { version = "1.2.1", features = ["v4"] }
dunce = "1.0.3"
async-graphql = { version = "4.0.15", features = ["apollo_tracing"] }
async-graphql-poem = "4.0.15"
bytes = "1.2.1"
arc-ext = { version = "0.1.0", features = ["async-graphql"] }

[features]
playground = []

